apps/student-reg/k8s/base/networkpolicies/allow-app-egress-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-egress-to-postgres
spec:
  podSelector:
    matchLabels:
      app: student-reg
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
