apps/student-reg/k8s/base/networkpolicies/allow-student-reg-from-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-student-reg-from-prometheus
  namespace: student-reg-dev
spec:
  podSelector:
    matchLabels:
      app: student-reg
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 8000
